--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 # RedHat specific package installations
-- include: RedHat.yml
+- include_tasks: RedHat.yml
   when: ansible_os_family  == "RedHat"
 
 # Debian specific package installations
-- include: Debian.yml
+- include_tasks: Debian.yml
   when: ansible_os_family  == "Debian" or ansible_os_family == "Linuxmint"
